Changed how the calendar shows days (now in starting with monday) made weekends red and disabled, along with more fixes to API scripts to varrant the removal of the global logged in user variable

--- a/bootstrap-5.3.2-dist/css/bootstrap.css
+++ b/bootstrap-5.3.2-dist/css/bootstrap.css
@@ -10420,3 +10420,8 @@ input:-webkit-autofill:active{
   background-color: #007bff; /* Change background color to blue */
   color: #fff; /* Change text color to white */
 }
+
+.weekend{
+  color: #000;
+  background-color:#e4606d!important;
+}
