--- a/bootstrap-5.3.2-dist/css/bootstrap.css
+++ b/bootstrap-5.3.2-dist/css/bootstrap.css
@@ -10426,3 +10426,9 @@ input:-webkit-autofill:active{
   background-color:#e4606d!important;
 }
 
+#inputNewEndDate {
+  position: absolute;
+  top: 50%; /* Adjust the top position as needed */
+  left: 50%; /* Adjust the left position as needed */
+  transform: translate(-30%, 20%); /* Center the div horizontally and vertically */
+}
