Did ALOT with the calendar, pretty much finished the functionality of days that are taken already not being shown as an option for customers

--- a/bootstrap-5.3.2-dist/css/bootstrap.css
+++ b/bootstrap-5.3.2-dist/css/bootstrap.css
@@ -10389,6 +10389,10 @@ input:-webkit-autofill:active{
   background-color:#bababa
 }
 
+.takenDay{
+  background-color:#bababa
+}
+
 .outline {
   border: 2px solid #000;
 }
