--- a/bootstrap-5.3.2-dist/css/bootstrap.css
+++ b/bootstrap-5.3.2-dist/css/bootstrap.css
@@ -10386,11 +10386,11 @@ input:-webkit-autofill:active{
 }
 
 .prevDay{
-  background-color:#bababa
+  background-color:#bababa;
 }
 
 .takenDay{
-  background-color:#bababa
+  background-color:#bababa;
 }
 
 .outline {
