EPIC TABLES instead of lame squares AND sorting by chosen rows

--- a/bootstrap-5.3.2-dist/css/bootstrap.css
+++ b/bootstrap-5.3.2-dist/css/bootstrap.css
@@ -10469,3 +10469,9 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
     
 }
 
+
+td {
+  word-wrap: break-word;
+  white-space: pre-wrap; /* Ensures that long text wraps properly */
+  max-width: 500px; /* Adjust width as needed */
+}
