--- a/Correctrly_structured_project/public/AboutUs.ejs
+++ b/Correctrly_structured_project/public/AboutUs.ejs
@@ -8,7 +8,6 @@
         <!-- Local bootstrap.js-->
         <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
         <!-- Global bootstrap js-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" nonce="<%= nonce %>"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" nonce="<%= nonce %>"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" nonce="<%= nonce %>"></script>
     </head>
@@ -72,7 +71,7 @@
     </section>
     </div>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3nYXMiuY61TAkEOJYpK6ejSG8Gw7z7Fo&callback=initMap" nonce="<%= nonce %>"></script>>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3nYXMiuY61TAkEOJYpK6ejSG8Gw7z7Fo&callback=initMap" nonce="<%= nonce %>">
     initMap();
     </script>
 
