Finished admin pannel (some small things like adding worker form and id's not shown for pojects need fixing), and worker page broke because the fetch's are not available in wroker routes only admin rn

--- a/Correctrly_structured_project/public/AboutUs.ejs
+++ b/Correctrly_structured_project/public/AboutUs.ejs
@@ -71,8 +71,8 @@
     </section>
     </div>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3nYXMiuY61TAkEOJYpK6ejSG8Gw7z7Fo&callback=initMap" nonce="<%= nonce %>">
-    initMap();
+    src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&callback=initMap" nonce="<%= nonce %>">
+    initmap();
     </script>
 
 
