--- a/Correctrly_structured_project/public/Admin.ejs
+++ b/Correctrly_structured_project/public/Admin.ejs
@@ -9,7 +9,7 @@
     <!-- Local bootstrap.js-->
     <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>>
     <!-- Global bootstrap js-->
-      
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"
         nonce="<%= nonce %>"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -63,99 +63,6 @@
                             <button id="viewFinishedProjects" class="btn btn-outline-secondary text-white">View finished
                                 projects</button>
                         </div>
-
-                        <div id="inputNewEndDate" class="col-sm-3 text-center nodisplay bg-light">
-                            <h3 class="text-white">Enter the new end date for project: <span id="project_id"></span> (if
-                                the project isn't yet tagged as "Delayed" it will after these changes)</h3>
-                            <span id="InvalidDateTime" class="nodisplay" style="color:rgb(255, 0, 0)"><b>Invalid end
-                                    time</b></span>
-                            <br>
-                            <input type="datetime-local" id="dateinput" class="form-control"
-                                onkeypress="handleEndDateKeyPress(event)">
-                            <button class="btn btn-outline-primary mt-2" id="changeEndTimeButton">Change</button>
-                        </div>
-
-                        <div id="searchUser" class="col-sm-3 m-auto text-center nodisplay">
-                            <span id="InvalidID" class="nodisplay" style="color:rgb(255, 0, 0)"><b>Invalid ID</b></span>
-                            <br>
-                            <input type="text" id="userIDInput" class="form-control" placeholder="Enter User ID"
-                                onkeypress="handleKeyPress(event)">
-                            <button class="btn btn-outline-primary mt-2" id="searchUserButton">Search</button>
-                        </div>
-
-                        <div id="searchProject" class="col-sm-3 m-auto text-center nodisplay">
-                            <span id="InvalidProjectID" class="nodisplay" style="color:rgb(255, 0, 0)"><b>Invalid
-                                    ID</b></span>
-                            <br>
-                            <input type="text" id="ProjectIDInput" class="form-control" placeholder="Enter Project ID"
-                                onkeypress="handleProjectKeyPress(event)">
-                            <button class="btn btn-outline-primary mt-2" id="searchProjectButton">Search</button>
-                        </div>
-
-                        <div class="col-md-3  bg-light text-white m-auto nodisplay " style="max-width:20%"
-                            id="registrationForm">
-                            <form class="mt-3">
-
-                                <label id="email-red" for="email">Email:</label>
-                                <span class="ml-1 nodisplay" id="NoAccount" style=" color:rgb(255, 0, 0)"><b> - Account
-                                        doesnt
-                                        exsist</b></span>
-                                <span class="ml-1 nodisplay" id="WorkerExsists" style=" color:rgb(255, 0, 0)"><b>- User
-                                        is
-                                        already a
-                                        worker</b></span>
-                                <input class="form-control" type="email" id="email" name="email" required><br>
-
-                                <label for="workerType">Worker Type:</label>
-                                <input class="form-control" type="text" id="workerType" name="workerType" maxlength="45"
-                                    required>
-
-                                <input class="mt-3" type="checkbox" id="administrator" name="administrator">
-                                <label for="administrator">Administrator</label><br>
-
-                                <button id="submitButton" class="btn btn-secondary btn-block mt-2 mb-4"
-                                    type="submit">Register
-                                    worker</button>
-                            </form>
-                        </div>
-
-                        <div style="overflow-x: auto;" id="userDataContainer"
-                            class="table-responsive text-white nodisplay">
-                            <table class="table table-bordered table-hover">
-                                <thead class="thead-dark">
-                                    <tr>
-
-                                        <th class="align-middle" scope="col">Name</th>
-                                        <th class="align-middle" scope="col">UserName</th>
-                                        <th class="align-middle" scope="col">Email</th>
-                                        <th class="align-middle" scope="col">Check Projects</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="user-table-body">
-                                    <!-- Appointment data will be injected here -->
-                                </tbody>
-                            </table>
-                        </div>
-
-                        <div style="overflow-x: auto;" id="adminDataContainer"
-                            class="table-responsive text-white nodisplay">
-                        </div>
-                        <table class="table table-bordered table-hover">
-                            <thead class="thead-dark nodisplay">
-                                <tr>
-
-                                    <th class="align-middle" scope="col">Name</th>
-                                    <th class="align-middle" scope="col">UserName</th>
-                                    <th class="align-middle" scope="col">Email</th>
-                                    <th class="align-middle" scope="col">Tenure</th>
-                                    <th class="align-middle" scope="col">Worker type</th>
-                                    <th class="align-middle" scope="col">Manage administrator status</th>
-                                </tr>
-                            </thead>
-                            <tbody id="admin-table-body">
-                                <!-- Appointment data will be injected here -->
-                            </tbody>
-                        </table>
                     </div>
 
                     <div style="overflow-x: auto;" id="ProjectDataContainer"
@@ -165,7 +72,8 @@
                                 <tr>
                                     <th class="align-middle" scope="col" data-column="idUser">Username</th>
                                     <th class="align-middle" scope="col" data-column="StartDate">Start Date</th>
-                                    <th class="align-middle" scope="col" data-column="EndDateProjection">Projected End
+                                    <th class="align-middle" scope="col" data-column="EndDateProjection">Projected
+                                        End
                                         Date
                                     </th>
                                     <th class="align-middle" scope="col" data-column="ProjectInfo">Project Info</th>
@@ -177,9 +85,147 @@
                             </tbody>
                         </table>
                     </div>
+
+                    <div style="overflow-x: auto;" id="userDataContainer" class="table-responsive text-white nodisplay">
+                        <table class="table table-bordered table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+
+                                    <th class="align-middle" scope="col">Name</th>
+                                    <th class="align-middle" scope="col">UserName</th>
+                                    <th class="align-middle" scope="col">Email</th>
+                                    <th class="align-middle" scope="col">Check Projects</th>
+                                </tr>
+                            </thead>
+                            <tbody id="user-table-body">
+                                <!-- Appointment data will be injected here -->
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div style="overflow-x: auto;" id="adminDataContainer"
+                        class="table-responsive text-white nodisplay">
+                        <table class="table table-bordered table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th class="align-middle" scope="col">ID</th>
+                                    <th class="align-middle" scope="col">Name</th>
+                                    <th class="align-middle" scope="col">UserName</th>
+                                    <th class="align-middle" scope="col">Email</th>
+                                    <th class="align-middle" scope="col">Tenure</th>
+                                    <th class="align-middle" scope="col">AdminTenure</th>
+                                    <th class="align-middle" scope="col">Worker type</th>
+                                    <th class="align-middle" scope="col">Manage administrator status</th>
+                                </tr>
+                            </thead>
+                            <tbody id="admin-table-body">
+                                <!-- Appointment data will be injected here -->
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div style="overflow-x: auto;" id="workerDataContainer"
+                        class="table-responsive text-white nodisplay">
+                        <table class="table table-bordered table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th class="align-middle" scope="col">ID</th>
+                                    <th class="align-middle" scope="col">Name</th>
+                                    <th class="align-middle" scope="col">UserName</th>
+                                    <th class="align-middle" scope="col">Email</th>
+                                    <th class="align-middle" scope="col">Tenure</th>
+                                    <th class="align-middle" scope="col">Worker type</th>
+                                    <th class="align-middle" scope="col">Manage administrator status</th>
+                                </tr>
+                            </thead>
+                            <tbody id="worker-table-body">
+                                <!-- Appointment data will be injected here -->
+                            </tbody>
+                        </table>
+                    </div>
+                    <div style="overflow-x: auto;" id="inputNewEndDate" class="table-responsive bg-light nodisplay">
+                        <table class="table table-bordered table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th colspan="2" class="text-center text-white">
+                                        Choose the new end date for project: ID_<span id="project_id"></span>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="align-middle text-white" style="width: 50%;">
+                                        <p><strong>!WARNING!</strong></p>
+                                        <p>If the project isn't yet tagged as delayed, it will be after any changes to
+                                            the end date time.</p>
+                                    </td>
+                                    <td class="align-middle" style="width: 50%;">
+                                        <div class="d-flex flex-column align-items-center">
+                                            <input style="width: 80%;" type="datetime-local" id="dateinput"
+                                                class="form-control text-center mb-2">
+                                            <button id="changeEndTimeButton"
+                                                class="btn btn-outline-primary mt-2">Change</button>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                                <tr id="InvalidDateTime" class="nodisplay">
+                                    <td colspan="2" class="text-center">
+                                        <span style="color:rgb(255, 0, 0)"><b>Invalid end time</b></span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div id="searchUser" class="col-sm-3 m-auto text-center nodisplay">
+                        <span id="InvalidID" class="nodisplay" style="color:rgb(255, 0, 0)"><b>Invalid ID</b></span>
+                        <br>
+                        <input type="text" id="userIDInput" class="form-control" placeholder="Enter User ID"
+                            onkeypress="handleKeyPress(event)">
+                        <button class="btn btn-outline-primary mt-2" id="searchUserButton">Search</button>
+                    </div>
+
+                    <div id="searchProject" class="col-sm-3 m-auto text-center nodisplay">
+                        <span id="InvalidProjectID" class="nodisplay" style="color:rgb(255, 0, 0)"><b>Invalid
+                                ID</b></span>
+                        <br>
+                        <input type="text" id="ProjectIDInput" class="form-control" placeholder="Enter Project ID"
+                            onkeypress="handleProjectKeyPress(event)">
+                        <button class="btn btn-outline-primary mt-2" id="searchProjectButton">Search</button>
+                    </div>
+
+                    <div class="col-md-3  bg-light text-white m-auto nodisplay " style="max-width:20%"
+                        id="registrationForm">
+                        <form class="mt-3">
+
+                            <label id="email-red" for="email">Email:</label>
+                            <span class="ml-1 nodisplay" id="NoAccount" style=" color:rgb(255, 0, 0)"><b> - Account
+                                    doesnt
+                                    exsist</b></span>
+                            <span class="ml-1 nodisplay" id="WorkerExsists" style=" color:rgb(255, 0, 0)"><b>- User
+                                    is
+                                    already a
+                                    worker</b></span>
+                            <input class="form-control" type="email" id="email" name="email" required><br>
+
+                            <label for="workerType">Worker Type:</label>
+                            <input class="form-control" type="text" id="workerType" name="workerType" maxlength="45"
+                                required>
+
+                            <input class="mt-3" type="checkbox" id="administrator" name="administrator">
+                            <label for="administrator">Administrator</label><br>
+
+                            <button id="submitButton" class="btn btn-secondary btn-block mt-2 mb-4"
+                                type="submit">Register
+                                worker</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
+
+
         <script src="/js/Admin.js" nonce="<%= nonce %>"></script>
 </body>
 
