Now using layout for smoother page load, added ID's to be shown in admin pannel when checking information and made it so projects tables each column has a set width, so when the sorting arrow gets shown it doesnt extend the column anymore, looks way smoother

--- a/Correctrly_structured_project/src/views/pages/Admin.ejs
+++ b/Correctrly_structured_project/src/views/pages/Admin.ejs
@@ -72,6 +72,7 @@
                         <table class="table table-bordered table-hover">
                             <thead class="thead-dark">
                                 <tr>
+                                    <th class="align-middle" scope="col" data-column="idProject">Project ID</th>
                                     <th class="align-middle" scope="col" data-column="idUser">Username</th>
                                     <th class="align-middle" scope="col" data-column="StartDate">Start Date</th>
                                     <th class="align-middle" scope="col" data-column="EndDateProjection">Projected
@@ -93,6 +94,7 @@
                             <thead class="thead-dark">
                                 <tr>
 
+                                    <th class="align-middle" scope="col">User ID</th>
                                     <th class="align-middle" scope="col">Name</th>
                                     <th class="align-middle" scope="col">UserName</th>
                                     <th class="align-middle" scope="col">Email</th>
@@ -110,7 +112,7 @@
                         <table class="table table-bordered table-hover">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th class="align-middle" scope="col">ID</th>
+                                    <th class="align-middle" scope="col">Admin ID</th>
                                     <th class="align-middle" scope="col">Name</th>
                                     <th class="align-middle" scope="col">UserName</th>
                                     <th class="align-middle" scope="col">Email</th>
@@ -131,7 +133,7 @@
                         <table class="table table-bordered table-hover">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th class="align-middle" scope="col">ID</th>
+                                    <th class="align-middle" scope="col">Worker ID</th>
                                     <th class="align-middle" scope="col">Name</th>
                                     <th class="align-middle" scope="col">UserName</th>
                                     <th class="align-middle" scope="col">Email</th>
