--- a/Correctrly_structured_project/src/views/pages/home.ejs
+++ b/Correctrly_structured_project/src/views/pages/home.ejs
@@ -16,11 +16,14 @@
 </head> <style>
     body {
         margin: 0;
-        font-family: Arial, sans-serif;
         scroll-behavior: smooth;
     }
 </style>
 <body>
+    <div id="session-message" class="custom-alert nodisplay">
+        <h4>Session has ended. Please log in again.</h4>
+    </div>
+
 <div style="width: 40%" class="container text-white mt-5" >
     <div tabindex=0 class="bg-light p-4 rounded " style="min-width: 250px ">
         <div class="row">
