--- a/Correctrly_structured_project/src/views/pages/home.ejs
+++ b/Correctrly_structured_project/src/views/pages/home.ejs
@@ -20,8 +20,11 @@
     }
 </style>
 <body>
+    <div id="unauthorizedAccess" class="custom-alert text-danger nodisplay">
+        <h4>UNAUTHORIZED ACCESS!</h4>
+    </div>
     <div id="session-message" class="custom-alert nodisplay">
-        <h4>Session has ended. Please log in again.</h4>
+        <h4>No session found, please log in!</h4>
     </div>
 
 <div style="width: 40%" class="container text-white mt-5" >
