--- a/Correctrly_structured_project/src/views/pages/AboutUs.ejs
+++ b/Correctrly_structured_project/src/views/pages/AboutUs.ejs
@@ -13,37 +13,40 @@
     </head>
     
 <body >
-    <div class="mx-80 mt-5 ml-5">
-    <section class=" container my-5 text-white ">
-        <div class="row">
-            <div  tabindex=0 class="col-lg-6 bg-light p-3">
-                <h2>General information</h2>
-                <p>We offer a wide range of car repair and maintenance services to keep your vehicle in top condition. Our expert technicians are here to help you with any car-related issues.</p>
-                <p>We offer all around top prices for the services we offer, in addition if you know what you need, we can give you an estimate on pricing instantly</p>       
-        </div>
-    </section>
-    <!-- Location Section -->
-    <section  class=" py-5 text-white">
-        <div class="container ">
-            <div class="row ">
-                <div tabindex=0 class="col-md-4 bg-light p-3">
-                    <h2>Visit Our Location</h2>
-                    <p>Find us at the following address:</p>
-                    <address>
-                        Odre, LV-3285<br>
-                        Laucienes pagasts, Talsu novads<br>
-                        Latvia
-                    </address>
+    <div class="d-flex justify-content-center align-items-center mx-80 ml-5">
+        <section class="container my-5 text-white">
+            <div class="row justify-content-center"> <!-- Center the row -->
+                <div tabindex="0" class="col-lg-6 bg-light p-4"> <!-- General Information -->
+                    <h2>General information</h2>
+                    <p>We offer a wide range of car repair and maintenance services to keep your vehicle in top condition. Our expert technicians are here to help you with any car-related issues.</p>
+                    <p>We offer all-around top prices for the services we offer; if you know what you need, we can give you an estimate on pricing instantly.</p>
                 </div>
-                    <div style="width:500px; height:265px" id="map"></div>
+                <div class="ml-4 col-lg-5">
+                    <div class="row">
+                        <div class="col-lg-8 bg-light p-4"> <!-- Text and Address -->
+                            <h2>Visit Our Location</h2>
+                            <p>Find us at the following address:</p>
+                            <address>
+                                Odre, LV-3285<br>
+                                Laucienes pagasts, Talsu novads<br>
+                                Latvia
+                            </address>
+                        </div>
+                        <div class="col-lg-3 p-0"> <!-- Map -->
+                            <div style="width: 400%; height: 265px;" id="map"></div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
-        </div>
-    </section>
-    <br><br><br>
-    <section class=" py-5 ">
+        </section>
+    </div>
+    
+    
+    <section class=" py-4 ">
         <div  tabindex=0  class="container text-white bg-light">
             <div class="row">
-                <div class="col-md-6 p-3">
+                <div class="col-md-6 p-4">
                     <h2>Contact Us</h2>
                     <p>If you have any questions or need assistance, feel free to get in touch with our team. We're here to help you with your car repair needs.</p>
                     <p>Or you can call us at +371 29 392 382</p> 
@@ -60,7 +63,7 @@
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea class="form-control" id="message" rows="4" placeholder="Your Message"></textarea>
+                            <textarea class="form-control" id="message" rows="2" placeholder="Your Message"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message</button>
                     </form>
@@ -74,16 +77,6 @@
     src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&callback=initMap" nonce="<%= nonce %>">
 </script>
 
-
-
-
-<div class="footer">
-    <div class="container"  style="max-width: 95%;">
-        <p>&copy; 2023 Your Website - Additional Information Here</p>
-        <p>Contact: velderis@gmail.com</p>
-
-    </div>
-</div>
 </body>
 
 </html>
