--- a/Correctrly_structured_project/src/views/pages/AboutUs.ejs
+++ b/Correctrly_structured_project/src/views/pages/AboutUs.ejs
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <link rel="manifest" href="/js/manifest.json">
-        <!-- Local bootstrap.js-->
-        <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
-        <!-- Global bootstrap js-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" nonce="<%= nonce %>"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" nonce="<%= nonce %>"></script>
-    </head>
-    
-<body >
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="manifest" href="/js/manifest.json">
+    <!-- Local bootstrap.js-->
+    <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
+    <!-- Global bootstrap js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" nonce="<%= nonce %>"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" nonce="<%= nonce %>"></script>
+
+    <style nonce="<%= nonce %>">
+        /* Custom styles */
+        #map {
+            width: 400%;
+            height: 265px;
+        }
+    </style>
+</head>
+
+<body>
     <div class="d-flex justify-content-center align-items-center mx-80 ml-5">
         <section class="container my-5 text-white">
             <div class="row justify-content-center"> <!-- Center the row -->
@@ -33,23 +42,21 @@
                             </address>
                         </div>
                         <div class="col-lg-3 p-0"> <!-- Map -->
-                            <div style="width: 400%; height: 265px;" id="map"></div>
+                            <div id="map"></div>
                         </div>
                     </div>
                 </div>
-                
             </div>
         </section>
     </div>
-    
-    
-    <section class=" py-4 ">
-        <div  tabindex=0  class="container text-white bg-light">
+
+    <section class="py-4">
+        <div tabindex=0 class="container text-white bg-light">
             <div class="row">
                 <div class="col-md-6 p-4">
                     <h2>Contact Us</h2>
                     <p>If you have any questions or need assistance, feel free to get in touch with our team. We're here to help you with your car repair needs.</p>
-                    <p>Or you can call us at +371 29 392 382</p> 
+                    <p>Or you can call us at +371 29 392 382</p>
                 </div>
                 <div class="col-md-6 p-3">
                     <form>
@@ -70,12 +77,10 @@
                 </div>
             </div>
         </div>
-       
     </section>
-    </div>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&callback=initMap" nonce="<%= nonce %>">
-</script>
+        src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&callback=initMap" nonce="<%= nonce %>">
+    </script>
 
 </body>
 
