--- a/Correctrly_structured_project/src/views/pages/Estimator.ejs
+++ b/Correctrly_structured_project/src/views/pages/Estimator.ejs
@@ -18,10 +18,17 @@
     <!-- Vector library for car painting UI-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.3.0/raphael.min.js" nonce="<%= nonce %>"></script>
 </head>
-
+<style  nonce="<%= nonce %>">
+    .customContainer{
+        display: flex; justify-content: space-between; 
+    }
+    .customContainer2{
+       flex: 1; margin-left: 10%;
+    }
+    </style>
 <body>
 
-    <div class="container text-white mt-5 bg-light mx-80 " style="display: flex; justify-content: space-between; ">
+    <div class="container text-white mt-5 bg-light mx-80 customContainer">
         <div>
             <h2 tabindex=0 class="mt-3">Select Car Areas to Paint</h2>
             <div class="mt-3 bg-dark" id="imageContainer">
@@ -78,7 +85,7 @@
             <p>Estimated Price: $<span id="price">0.00</span></p>
         </div>
 
-        <div class="text-white mt-3" style="flex: 1; margin-left: 10%;">
+        <div class="customContainer2 text-white mt-3" >
             <h2>Choose services</h2>
             <form id="repairForm" class="mt-3">
                 <div class="form-check">
