--- a/Correctrly_structured_project/src/views/pages/Login.ejs
+++ b/Correctrly_structured_project/src/views/pages/Login.ejs
@@ -6,40 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="manifest" href="/js/manifest.json">
-    <!-- Local bootstrap.js-->
+    
+    <!-- Local bootstrap.js -->
     <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
-    <!-- Global bootstrap js-->
-      
+    
+    <!-- Global bootstrap js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" nonce="<%= nonce %>"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" nonce="<%= nonce %>"></script>
 
+    <style nonce="<%= nonce %>">
+        .text-danger {
+            color: rgb(255, 0, 0);
+        }
+    </style>
 </head>
 
 <body>
     <div id="customLoginAlert" class="custom-alert nodisplay">
-        <h2>Succesfully logged in</h2>
+        <h2>Successfully logged in</h2>
     </div>
 
     <div class="container text-white mt-5 mx-80">
-        <div class="row justify-content-center ">
+        <div class="row justify-content-center">
             <div class="col-md-4 bg-light">
                 <form id="loginForm">
                     <h1 class="text-center">Login</h1>
                     <div class="form-group">
-                        <div id="username-red" class="row ml-0 mb-2" for="username">Username or email<span
-                                class="ml-1 nodisplay" id="WrongUsername" style=" color:rgb(255, 0, 0)"><b>- Invalid
-                                    credentials</b></span><span class="ml-1 nodisplay" id="EmptyUsername"
-                                style=" color:rgb(255, 0, 0)"><b>- Enter your username</b></span></div>
-                        <input type="text" class="form-control" id="username" placeholder="Enter your username"
-                            maxlength="45">
+                        <div id="username-red" class="row ml-0 mb-2" for="username">
+                            Username or email
+                            <span class="ml-1 nodisplay text-danger" id="WrongUsername"><b>- Invalid credentials</b></span>
+                            <span class="ml-1 nodisplay text-danger" id="EmptyUsername"><b>- Enter your username</b></span>
+                        </div>
+                        <input type="text" class="form-control" id="username" placeholder="Enter your username" maxlength="45">
                     </div>
                     <div class="form-group">
-                        <div id="password-red" class="row ml-0 mb-2" for="password">Password<span class="ml-1 nodisplay"
-                                id="WrongPassword" style=" color:rgb(255, 8, 8)"><b>- Incorrect password</b></span><span
-                                class="ml-1 nodisplay" id="EmptyPassword" style=" color:rgb(255, 0, 0)"><b>- Enter a
-                                    password</b></span></div>
-                        <input type="password" class="form-control " id="password" placeholder="Enter your password"
-                            maxlength="45">
+                        <div id="password-red" class="row ml-0 mb-2" for="password">
+                            Password
+                            <span class="ml-1 nodisplay text-danger" id="WrongPassword"><b>- Incorrect password</b></span>
+                            <span class="ml-1 nodisplay text-danger" id="EmptyPassword"><b>- Enter a password</b></span>
+                        </div>
+                        <input type="password" class="form-control" id="password" placeholder="Enter your password" maxlength="45">
                     </div>
                     <button type="submit" class="btn btn-secondary btn-block">Login</button>
                     <br>
@@ -47,7 +53,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="/js/Login.js" nonce="<%= nonce %>"></script>
 </body>
