--- a/Correctrly_structured_project/src/views/pages/Profile.ejs
+++ b/Correctrly_structured_project/src/views/pages/Profile.ejs
@@ -33,22 +33,22 @@
       <h3>Change your password<br></h1>
         <div class="form-group">
           <div id="current-password-red" class="row ml-0 mt-4 mb-1" for="password">Current password <span
-              class="ml-1 nodisplay" id="WrongPassword" style=" color:rgb(255, 0, 0)"><b>- Incorrect current
-                password</b></span><span class="ml-1 nodisplay" id="EmptyOldPassword" style="color:rgb(255, 0, 0)"><b>-
+              class="ml-1 nodisplay text-danger" id="WrongPassword" ><b>- Incorrect current
+                password</b></span><span class="ml-1 nodisplay text-danger" id="EmptyOldPassword" ><b>-
                 Enter your current password</b></span></div>
           <input type="password" class="form-control" id="current-password" placeholder="Enter your current password">
         </div>
         <div class="form-group">
           <div id="new-password-red" class="row ml-0 mb-1" for="password">New password<span class="ml-1 nodisplay"
-              id="UnsafeNewPassword" style=" color:rgb(255, 8, 8)"><b>- Enter a safe password</b></span><span
-              class="ml-1 nodisplay" id="EmptyNewPassword" style="color:rgb(255, 0, 0)"><b>- Enter a password</b></span>
+              id="UnsafeNewPassword text-danger" ><b>- Enter a safe password</b></span><span
+              class="ml-1 nodisplay text-danger" id="EmptyNewPassword" ><b>- Enter a password</b></span>
           </div>
           <input type="password" class="form-control " id="new-password" placeholder="Enter your new password">
         </div>
         <div class="form-group">
           <div id="confirm-new-password-red" class="row ml-0  mb-1" for="password">Confirm new password<span
-              class="ml-1 nodisplay" id="NoMatchPassword" style=" color:rgb(255, 8, 8)"><b>- Passwords dont
-                match</b></span><span class="ml-1 nodisplay" id="EmptyConfirmPassword" style="color:rgb(255, 0, 0)"><b>-
+              class="ml-1 nodisplay text-danger" id="NoMatchPassword" ><b>- Passwords dont
+                match</b></span><span class="ml-1 nodisplay text-danger" id="EmptyConfirmPassword" ><b>-
                 Enter a password</b></span></div>
           <input type="password" class="form-control " id="confirm-new-password"
             placeholder="Enter your new password again">
